dataset1235/2025-2/1379599236/users/2397405626/executions/2277843042_1078076002.log
== RUN (2025-08-24 20:27:33)
-- CODE: 
x 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:32:31)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = n1 + n2 + n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
10.0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:31:02)
-- CODE: 
x1 = 1.23
x2 = 0
print(x2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 20:34:51)
-- CODE: 
x1 = 1.23
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:29:05)
-- CODE: 
x1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:29:40)
-- CODE: 
x1 = "UFAM"
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
UFAM
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:30:34)
-- CODE: 
x1 = "UFAM"
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
UFAM
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:33:17)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3)/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
4.0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:32:22)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = n1 + n2 + n3/3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:34:50)
-- CODE: 
x1 = 1.23
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 20:34:31)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
4.0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:30:27)
-- CODE: 
x1 = "UFAM"
print(x1
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 2
    print(x1
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 2
    print(x1
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:31:26)
-- CODE: 
x1 = 1.23
x2 = 0
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 20:33:56)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
4.0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 20:30:02)
-- CODE: 
x1 = "UFAM
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "UFAM
         ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1 = "UFAM
         ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
